--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import CookieConsent from '../components/CookieConsent.astro';
 
 const pageTitle = 'Reignite: Digital Agency for Clarity, Momentum, and Results';
 const pageDesc =
-  'RFull-service digital agency. We combine strategy, design, and delivery to fix problems, accelerate teams, and build products that work. No buzzwords. Real results.';
+  'Get Clarity, Momentum, and Results. We deliver product strategy, UX design, and acceleration  by embedding in your team. No buzzwords. Real progress.';
 ---
 <BaseLayout title={pageTitle} description={pageDesc}>
   <Header />
